--- a/MicroRabbit.Banking.Api/appsettings.json
+++ b/MicroRabbit.Banking.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BankingDbConnection": "Server=(localdb)\\mssqllocaldb;Database=MicroRabbit.BankingDB;Trusted_Connection=true;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,4 +10,5 @@
     }
   },
   "AllowedHosts": "*"
+
 }
