--- a/MicroRabbit.Banking.Domain/MicroRabbit.Banking.Domain.csproj
+++ b/MicroRabbit.Banking.Domain/MicroRabbit.Banking.Domain.csproj
@@ -5,9 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
+    <Folder Include="EventsHandlers\" />
+    <Folder Include="CommandsHandlers\" />
     <Folder Include="Commands\" />
-    <Folder Include="Models\" />
+    <Folder Include="Events\" />
   </ItemGroup>
 
 </Project>
