--- a/MicroRabbit.Banking.Domain/MicroRabbit.Banking.Domain.csproj
+++ b/MicroRabbit.Banking.Domain/MicroRabbit.Banking.Domain.csproj
@@ -6,9 +6,10 @@
 
   <ItemGroup>
     <Folder Include="EventsHandlers\" />
-    <Folder Include="CommandsHandlers\" />
-    <Folder Include="Commands\" />
-    <Folder Include="Events\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MicroRabbit.Domain.Core\MicroRabbit.Domain.Core.csproj" />
   </ItemGroup>
 
 </Project>
