--- a/MicroRabbit.Transfer.Api/appsettings.json
+++ b/MicroRabbit.Transfer.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "TransferDbConnection": "Server=(localdb)\\mssqllocaldb;Database=MicroRabbit.TransferDB;Trusted_Connection=true;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
