--- a/MicroRabbit.Transfer.Domain/MicroRabbit.Transfer.Domain.csproj
+++ b/MicroRabbit.Transfer.Domain/MicroRabbit.Transfer.Domain.csproj
@@ -5,10 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="EventsHandlers\" />
-    <Folder Include="Events\" />
     <Folder Include="CommandsHandlers\" />
     <Folder Include="Commands\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MicroRabbit.Domain.Core\MicroRabbit.Domain.Core.csproj" />
   </ItemGroup>
 
 </Project>
